# ICL-Runtime

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.github/workflows/: bindings.yml  ci.yml  publish.yml
bindings/go/: README.md  go.mod  icl.go  icl.h  icl_test.go
bindings/go/ffi/: Cargo.toml  cbindgen.toml
bindings/go/ffi/src/: lib.rs
bindings/javascript/: .gitignore  Cargo.toml  README.md  build.mjs  icl.d.ts  package.json
bindings/javascript/src/: lib.rs
bindings/javascript/tests/: test_icl.mjs
bindings/python/: Cargo.toml  README.md  icl.pyi  pyproject.toml
bindings/python/src/: lib.rs
bindings/python/tests/: test_icl.py
crates/icl-cli/: Cargo.toml  README.md
crates/icl-cli/src/: main.rs
crates/icl-cli/tests/: cli_tests.rs
crates/icl-core/: Cargo.toml  README.md
crates/icl-core/src/: error.rs  executor.rs  lib.rs  normalizer.rs  verifier.rs
crates/icl-core/src/parser/: ast.rs  mod.rs  tokenizer.rs
docs/: api-reference.md  example-contracts.md  getting-started.md  implementation-guide.md  runtime-architecture.md  testing.md
runtime/: Cargo.toml
runtime/src/: error.rs  executor.rs  lib.rs  normalizer.rs  verifier.rs
