[workspace]
members = [
    "crates/icl-core",
    "crates/icl-cli",
    "bindings/python",
    "bindings/go/ffi",
]
exclude = [
    "bindings/javascript",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ICL Team"]
license = "MIT"
repository = "https://github.com/ICL-System/ICL-Runtime"
