[package]
name = "icl-runtime"
version = "0.1.0"
edition = "2021"
authors = ["ICL Team"]
license = "MIT OR Apache-2.0"
description = "Intent Contract Language (ICL) - Universal deterministic runtime"
repository = "https://github.com/ICL-System/ICL-Runtime"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "determinism"
harness = false
