[package]
name = "icl-runtime"
version = "0.1.4"
edition = "2021"
authors = ["ICL Team"]
license = "MIT"
repository = "https://github.com/ICL-System/ICL-Runtime"
description = "JavaScript/TypeScript bindings for ICL (Intent Contract Language) via WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
icl-core = { path = "../../crates/icl-core" }
serde_json = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
