[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "icl-runtime"
version = "0.1.4"
description = "Python bindings for ICL (Intent Contract Language) — deterministic intent contracts"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "ICL Team" }]
keywords = ["icl", "intent", "contract", "deterministic", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/ICL-System/ICL-Runtime"
Repository = "https://github.com/ICL-System/ICL-Runtime"
Documentation = "https://github.com/ICL-System/ICL-Docs"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "icl"
