[package]
name = "icl-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Intent Contract Language (ICL) - Command-line interface"

[dependencies]
icl-core = { path = "../icl-core", version = "0.1.2" }
clap = { version = "4", features = ["derive"] }
colored = "2"
serde_json = "1.0"
