[package]
name = "icl-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Intent Contract Language (ICL) - Canonical runtime core library"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

# Benchmarks will be added in Phase 6
# [[bench]]
# name = "determinism"
# harness = false
